@@ -1,11 +1,11 @@
-			Installing XPCE/Prolog
-			======================
+		Installing XPCE/Prolog from the SOURCES
+		=======================================
 
 			   Jan Wielemaker
 			(jan@swi.psy.uva.nl)
 
-Last updated:	Fri Apr 26, 1996 for version 4.8.17 (complete rewrite)
-		Mon Nov 11  1996 for version 4.9.0  (added runtime building)
+History:	Fri Apr 26, 1996 for version 4.8.17 (complete rewrite)
+		Tue Jan 21, 1997 updated for 4.9.1  (minor changes)
 
 Configuration, compilation and installation is based on the GNU autoconf
 package. General comments on installing packages   based on autoconf are
@@ -38,6 +38,10 @@ Required tools
 	the shell-script install-sh, giving an tremendous speedup while
 	running `make dv-install'.
 
+	Well, maybe I should say: GET GNU INSTALL.  Many problems in the
+	final installation have been reported using other versions of
+	install 
+
 For all other required tools, both the   GNU,  BSD and System-V versions
 are supposed to work properly. Our path   prefers the tools in the order
 GNU, BSD (UCB), System-V. If you have trouble,  you may want to try this
@@ -60,7 +64,23 @@ To install XPCE/SWI-Prolog from the sources:
 		% make
 		% make dv-install
 
+XPM colour image files
+======================
 
+When available, XPCE will use  libXpm  to   deal  with  XPM image files,
+providing portable full-colour images with mask   and hot-spot, ready to
+use  as  icons  or  cursors   on    both   X11  and  Windows  platforms.
+Unfortunately, libXpm is not part of   many  standard X11 distributions,
+and should thus be installed prior to   running  configure for XPCE. You
+can find a version of the xpm sources in
+
+	ftp://swi.psy.uva.nl/pub/xpce/util/xpm-3.4i.tar.gz.
+
+If you make a version for  distribution,   it  is  good practice to link
+using the static version of libXpm.
+
+
+===================================================
 Installation Guide to arrive at a *Working* Version
 ===================================================
 
@@ -206,7 +226,7 @@ Just to make sure your programs are accessible and of the right version,
 try:
 
 	% pl -v
-	SWI-Prolog version 2.7.2 for sparc-solaris2.5
+	SWI-Prolog version 2.7.18 for sparc-solaris2.5
 	% make -v
 	GNU Make version 3.74, by Richard Stallman and Roland McGrath.
 	...
@@ -313,50 +333,8 @@ Which will:
 	# run `make' in the Prolog home directory to make quick-load
 	versions of some large and frequently used library packages.
 
-	# in $prefix/bin, make links to the xpce and xpce-client
+	# in $exec_prefix/bin, make links to the xpce and xpce-client
 	executables
 					     
 
-Creating the XPCE/SWI-Prolog runtime system
-===========================================
-
-	# Create the SWI-Prolog runtime system (requires version
-	  2.7.16 or later).  <rt> is used as example build-dir.
-	  Any other directory will do.  You may specify --prefix
-	  and --exec_prefix as normal.
-  
-	  This run will create the SWI-Prolog runtime system in 
-          the directory $prefix/lib/rt-pl-<version>/
-
-
-		% cd .../pl-<version>
-		% mkdir rt
-		% cd rt
-		% ../src/configure --enable-runtime
-		% make install
-		
-	# Create the XPCE runtime system.  The basic sequence is
-	  below.  Give the same --prefix and --exec_prefix as in
-	  the command above.
-
-	  Configure will try to find the SWI-Prolog runtime system,
-	  but will only succeed iff the prefix/exec_prefix options
-	  are the same, the build is run on the same machine and
-	  there is only one SWI-Prolog runtime system around.  If
-	  this is not the case, give:
-
-	  	% export PL=<path-to-runtime-prolog-executable>
-
-	  or (csh)
-
-	  	% setenv PL <path-to-runtime-prolog-executable>
-
-	  where <path-to-runtime-prolog-executable> is normally
-	  something like /usr/local/lib/rt-pl-<version>/bin/<arch>/pl
-
-	        % cd .../xpce-<version>
-		% mkdir rt
-		% cd rt
-		%  ../src/configure --enable-runtime
-		% make
-		% make rt-install
+	
