@@ -32,6 +32,7 @@ mandir=$(prefix)/man/man$(mansec)
 
 PL=pl
 XPCE=xpce
+CLIENT=xpce-client
 PLARCH=@PLARCH@
 BOOTPL=@BOOTPL@
 
@@ -66,6 +67,7 @@ install:	all
 		(cd $(bindir); rm -f $(PL); ln -s $$PLBASE/bin/$(PLARCH)/pl $(PL)) ; \
 		if [ -d xpce ]; then \
 		  (cd $(bindir);rm -f $(XPCE);ln -s $$PLBASE/$(BPL) $(XPCE));\
+		  (cd $(bindir);rm -f $(CLIENT);ln -s $$PLBASE/xpce/bin/$(PLARCH)/xpce-client $(CLIENT)); \
 		fi
 		-for f in pl chpl; do \
 		    cp man/$$f.1 $(mandir)/$$f.$(mansec); \
